code fixing